<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/rl_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/loginbackground">

       <ImageView
        android:id="@+id/img_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/login_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x50"/>
       <ImageView
        android:id="@+id/img_ysb_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ysb_text"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/img_login_logo"
        android:layout_marginTop="@dimen/x10"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_ysb_text"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/x20"
            android:layout_marginRight="@dimen/x20"
            android:layout_marginTop="@dimen/x60">
            <com.mds.myysb.widget.EditTextView
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:input_icon = "@drawable/phone_icon"
                app:input_hint = "@string/mine_login_et_phone"
                app:is_password = "false" />
            <View
                style="@style/line"
                android:layout_marginTop="@dimen/x5"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:src="@drawable/login"
                    android:padding="3dp"/>
                <EditText
                    android:id="@+id/et_verificationCode"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:layout_gravity="center"
                    android:background="@null"
                    android:padding="3dp"
                    android:hint="@string/mine_login_et_verificationCode"
                    android:inputType="number"
                    android:textSize="12sp"
                    android:textColorHint="@color/phone_color"
                    android:textColor="@color/phone_color"/>
                <Button
                    android:id="@+id/btn_verificationCode"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_weight="3"
                    android:layout_gravity="center"
                    android:background="@drawable/btn_login_selector"
                    android:text="@string/mine_login_btn_verificationCode"
                    android:textSize="12sp"/>
            </LinearLayout>
            <View  style="@style/line" />
            <!-- 孕生宝协议 -->
            <RelativeLayout
                android:id="@+id/rl_protocol2"
                android:layout_gravity="center"
                android:paddingTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
                <TextView
                    android:id="@+id/tv_agree"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mine_login_tv_agree"
                    android:textColor="#99ffffff"
                    android:textSize="10sp" />
                <TextView
                    android:id="@+id/self_cb_agreeline"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/tv_agree"
                    android:text="@string/mine_login_self_cb_agreeline"
                    android:textColor="#0000ff"
                    android:textSize="10sp" />
                <TextView
                    android:id="@+id/tv2"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/self_cb_agreeline"
                    android:text="”"
                    android:textColor="#99ffffff"
                    android:textSize="10sp" />
            </RelativeLayout>
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_login_selector"
                android:layout_margin="30dp"
                android:textSize="18sp"
                android:textColor="@color/orange"
                android:text="@string/mine_login_btn_login"/>
        </LinearLayout>

    </RelativeLayout>


    <include
        layout="@layout/mine_fragment_personal_info" />

</FrameLayout>